# todox

./: .gitignore  .tasks_registry.csv  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  main.c
include/: add.h  complete.h  globals.h  list.h  registry.h  remove.h
lib/: registry.c
lib/add/: add.c
lib/complete/: complete.c
lib/list/: list.c
lib/remove/: remove.c
src/: main.c
